-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 3.1.0-beta
-
None
-
83ad1724f4ee57465b4ac007901d9b3b9fcdd974, cb7c12042fb7f269efe04ec9aece065a2c2664dc
How to reproduce:
1) Create an Qt application and use a BlackBerry kit with 10.2 version of API Level
2) Have a BB10 device with 10.2.1 OS Image and use it for the kit
3) Run the application
Expected behavior:
Since the "Check Runtime Version" setting is check, the version has to be checked but for Running the application, you need to have:
RUNTIME_VERSION <= DEVICE_VERSION
For Debugging the application, you need to have:
RUNTIME_VERSION == DEVICE_VERSION
Actual behavior:
The "Check Runtime Version" is always checking for:
RUNTIME_VERSION == DEVICE_VERSION
which is incorrect and we be quite annoying for developers since it is highly probable that RUNTIME_VERSION < DEVICE_VERSION.