Qnx: Check runtime version when debugging

This cannot be done in the "check device" deploy step
since the deploy configuration does not know which
run mode will be used, which is mandatory since this check
is only required with debug mode.

Task-number: QTCREATORBUG-11513

Change-Id: I25121cf61afcf947c3873a6d2767877892ab4afc
Reviewed-by: Nicolas Arnaud-Cormos <nicolas@kdab.com>