src/plugins/qnx/blackberryapplicationrunner.cpp
@@ -35,13 +35,17 @@
 #include "blackberrydeviceconnectionmanager.h"
 #include "blackberryrunconfiguration.h"
 #include "blackberrylogprocessrunner.h"
+#include "blackberrydeviceinformation.h"
 #include "qnxconstants.h"
 
+#include <coreplugin/icore.h>
+#include <projectexplorer/kit.h>
 #include <projectexplorer/target.h>
 #include <qmakeprojectmanager/qmakebuildconfiguration.h>
 #include <ssh/sshremoteprocessrunner.h>
 #include <utils/qtcassert.h>
 
+#include <QMessageBox>
 #include <QTimer>
 #include <QDir>
 
@@ -66,6 +70,7 @@ BlackBerryApplicationRunner::BlackBerryApplicationRunner(bool cppDebugMode, Blac
     , m_stopping(false)
     , m_launchProcess(0)
     , m_stopProcess(0)
+    , m_deviceInfo(0)
     , m_logProcessRunner(0)
     , m_runningStateTimer(new QTimer(this))
     , m_runningStateProcess(0)
@@ -76,6 +81,9 @@ BlackBerryApplicationRunner::BlackBerryApplicationRunner(bool cppDebugMode, Blac
     BuildConfiguration *buildConfig = target->activeBuildConfiguration();
     m_environment = buildConfig->environment();
     m_deployCmd = m_environment.searchInPath(QLatin1String(Constants::QNX_BLACKBERRY_DEPLOY_CMD));
+
+    QFileInfo fi(target->kit()->autoDetectionSource());
+    m_bbApiLevelVersion = BlackBerryVersionNumber::fromNdkEnvFileName(fi.baseName());
 
     m_device = BlackBerryDeviceConfiguration::device(target->kit());
     m_barPackage = runConfiguration->barPackage();
@@ -129,6 +137,52 @@ void BlackBerryApplicationRunner::displayConnectionOutput(Core::Id deviceId, con
         emit output(msg, Utils::StdOutFormat);
     else if (msg.contains(QLatin1String("Error:")))
         emit output(msg, Utils::StdErrFormat);
+}
+
+void BlackBerryApplicationRunner::checkDeviceRuntimeVersion(int status)
+{
+    if (status != BlackBerryNdkProcess::Success) {
+        emit output(tr("Cannot determine device runtime version."), Utils::StdErrFormat);
+        return;
+    }
+
+    if (m_bbApiLevelVersion.isEmpty()) {
+        emit output(tr("Cannot determine API level version."), Utils::StdErrFormat);
+        launchApplication();
+        return;
+    }
+
+    const QString runtimeVersion = m_deviceInfo->scmBundle();
+    if (m_bbApiLevelVersion.toString() != runtimeVersion) {
+        const QMessageBox::StandardButton answer =
+                QMessageBox::question(Core::ICore::mainWindow(),
+                                      tr("Confirmation"),
+                                      tr("The device runtime version(%1) does not match "
+                                         "the API level version(%2).\n"
+                                         "This may cause unexpected behavior when debugging.\n"
+                                         "Do you want to continue anyway?")
+                                      .arg(runtimeVersion, m_bbApiLevelVersion.toString()),
+                                      QMessageBox::Yes | QMessageBox::No);
+
+        if (answer == QMessageBox::No) {
+            emit startFailed(tr("API level version does not match Runtime version."));
+            return;
+        }
+    }
+
+    launchApplication();
+}
+
+void BlackBerryApplicationRunner::queryDeviceInformation()
+{
+    if (!m_deviceInfo) {
+        m_deviceInfo = new BlackBerryDeviceInformation(this);
+        connect(m_deviceInfo, SIGNAL(finished(int)),
+                this, SLOT(checkDeviceRuntimeVersion(int)));
+    }
+
+    m_deviceInfo->setDeviceTarget(m_sshParams.host, m_sshParams.password);
+    emit output(tr("Querying device runtime version..."), Utils::StdOutFormat);
 }
 
 void BlackBerryApplicationRunner::startFinished(int exitCode, QProcess::ExitStatus exitStatus)
@@ -266,6 +320,19 @@ void BlackBerryApplicationRunner::launchApplication()
     m_launchProcess->start(m_deployCmd, args);
     m_runningStateTimer->start();
     m_running = true;
+}
+
+void BlackBerryApplicationRunner::checkDeployMode()
+{
+    // If original device connection fails before launching, this method maybe triggered
+    // if any other device is connected
+    if (!BlackBerryDeviceConnectionManager::instance()->isConnected(m_device->id()))
+        return;
+
+    if (m_cppDebugMode)
+        queryDeviceInformation(); // check API version vs Runtime version
+    else
+        launchApplication();
 }
 
 void BlackBerryApplicationRunner::startRunningStateTimer()
